frontend/src/assets/styles/components/SustainingMembers.scss
.large-grid {
  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
  grid-auto-rows: 170px;
}

.small-grid {
  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
  grid-auto-rows: 100px;
  margin-top: 24px;

  img {
    max-width: 75px;
    max-height: 50px;
  }

  .tile {
    a {
      width: 100%;
      text-align: center;
    }
  }
}

.supporters-grid {
  display: grid;
  grid-gap: 16px;
  .box {
    background-color: unset;
    box-shadow: unset;
  }
}

.large-supporter {
  background-color: #f5f5f5;
  border-radius: 10px;
  flex-direction: column;
  position: relative;

  img {
    max-width: 165px;
    max-height: 65px;
  }

  .partner-title {
    position: absolute;
    width: 100%;
    bottom: 8px;
    left: 0;
    text-align: center;
  }

  .tile {
    padding: 0;
  }
}

.funders {
  img {
    max-height: 150px;
  }

  figure {
    height: 150px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 1.5em;
    margin-right: 1.5em;
    margin-bottom: 0em;
  }

  .title {
    font-size: 1rem;
    font-weight: 400;
    color: #002033;
  }

  a {
    text-align: center;
  }

  .subtitle {
    color: #4d6370;
  }

  .notification {
    border-radius: 10px;
    background-color: white;
    transition: 0.2s;
    padding: 1.25rem;

    &:hover {
      box-shadow: 0rem 0rem 1rem #ccd2d687;
      border-color: #ffffff;
    }
  }

  .fund-flagship {
    border: 2px solid #f1903b;
  }

  .fund-large {
    border: 2px solid #eee766;
  }

  .fund-medium {
    border: 2px solid #ccd2d6;

    figure {
      height: 120px;
    }

    img {
      max-height: 120px;
    }
  }

  .fund-small {
    figure {
      height: 100px;
    }

    img {
      max-height: 100px;
    }
  }

  .past {
    img {
      filter: grayscale(1);
    }
  }
}

.add-supporter {
  a {
    text-align: center;
    color: #002033;
  }
}

.supporters-grid {
  .large-supporter {
    border-radius: 10px;
    background-color: white;
    transition: 0.2s;
    padding: 1.25rem;

    &:hover {
      box-shadow: 0rem 0rem 1rem #ccd2d687;
      border-color: #ffffff;
    }
  }

  .fund-Flagship {
    border: 2px solid #f1903b;
  }

  .fund-Large {
    border: 2px solid #eee766;
  }
}

.grayscale {
  filter: grayscale(100%);
}

